Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -8,3 +8,13 @@ Understanding workflow and setting up our project.
 = Details =
 
 1) Vinayak - Task is to create a nice logo for our project. It would be     good to have a logo.
+
+2) The first task that we have to perform is understanding the workflow. Analyze the requirements. How the process takes place at IIIT-D. What are the inputs, how is a request processed and ultimately what is the output. Understanding the workflow and requirement analysis is task one.
+
+In order to do so - lets start meeting the people who are involved in the process and try to know from them how is the work carried out.
+
+For now we need to meet 4 people - Anoop sir, Ajay sir, Amit sir and Suruchi Ma'am. Let 3 people manage this task and visit all 4 people so that they can sequentially know the details and there are no breaks in the process analysis.
+
+Vinayak and Akshay Rajvanshi - You both are free in the morning tomorrow so I request you both to please contact Aishwarya and Paritosh in this regard, form a team and go ahead with this important task.
+
+We need to understand this workflow well, then only we can think of proceeding.
