--- a/wiki/Business_Process_Model.wiki
+++ b/wiki/Business_Process_Model.wiki
@@ -1,2 +1,5 @@
 [http://cse300-group4.googlecode.com/files/BusinessProcessModel%20%281%29.jpeg Here] is the Business process model for our project.
 '<img src="http://cse300-group4.googlecode.com/files/BusinessProcessModel%20%281%29.jpeg" alt="Logo"/>'
+
+For the pptx version please click on this link.
+http://code.google.com/p/cse300-group4/downloads/detail?name=Business%20Process%20Model%20for%20Expenses%20Payment.pptm&can=2&q=
