--- a/wiki/Meeting_with_Registrar.wiki
+++ b/wiki/Meeting_with_Registrar.wiki
@@ -2,11 +2,17 @@ Meeting with Registar Ashwani Sir
 
 = Introduction =
 
-Minutes of eeting with Ashwani Sir
+Minutes of meeting with Ashwani Sir
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+1)The administration has no concerns/apprehensions about digitizing the current manual process 
+
+2)Additional features for management needed : 
+    i)Report generation 
+    ii)Pending Requests Status feaure
+    iii)Record time for completion and closure of request
+    iv)How many requests received 
+    v)Additional features that can be included - leave form, local travel  
+
+3)A mechanism to know that the form has actually been authorized by the previous person before it has reached next person in the process , should be there .
