Edited wiki page Meeting_with_Registrar through web user interface.

--- a/wiki/Meeting_with_Registrar.wiki
+++ b/wiki/Meeting_with_Registrar.wiki
@@ -1,8 +1,6 @@
-Meeting with Registar Ashwani Sir
-
 = Introduction =
 
-Minutes of meeting with Ashwani Sir
+Minutes of meeting with Registar - Ashwani Sir
 
 = Details =
 
