Edited wiki page project_requirements through web user interface.

--- a/wiki/project_requirements.wiki
+++ b/wiki/project_requirements.wiki
@@ -1,20 +1,28 @@
-Please  update this after meetings with faculty and administration
+To be updated  after meetings with faculty and administration
 
 
 Administration Requirements (make a box for each )
  
 1)      Feature to authorize                    	->Our Solution :Digital Signature
-2)     Additional features for management needed :
-Report generation
+
+2)     Additional features for management needed : Report generation
+
 3)     Record times for completion and closure of request
+
 4)     How many requests received should be recorded
+
 5)     Additional features that can be included - leave form, local travel
+
 6)     Pending Requests Status feature
  
  
  
 Faculty  Requirements (make a box for each )
+
 1)Integration with mail ,google
+
 2)Easy to use
+
 3) Works irrespective of platform –Linux and Windows
+
 4)Status feature
