Edited wiki page Links_for_UI_designs through web user interface.

--- a/wiki/Links_for_UI_designs.wiki
+++ b/wiki/Links_for_UI_designs.wiki
@@ -1,4 +1,4 @@
-Hey just saw  IBM LOTUS , can derive some ideas of designs:
+Hey just saw  IBM LOTUS as suggested by Srikant Sir , can derive some ideas of designs:
 
 
 For integration with mail 
