--- a/wiki/Links_for_UI_designs.wiki
+++ b/wiki/Links_for_UI_designs.wiki
@@ -1,3 +1,16 @@
+Update:-
+
+Rough Draft of Login form:-
+
+http://cse300-group4.googlecode.com/files/08092012025.jpg -
+
+Rough Draft for Faculty Screen:-
+
+http://cse300-group4.googlecode.com/files/08092012024.jpg -
+
+
+(-Deepanker Paritosh)
+--------------------------------------------------------------------------
 Hey just saw  IBM LOTUS as suggested by Srikant Sir , can derive some ideas of designs:
 
 
