--- a/wiki/Links_for_UI_designs.wiki
+++ b/wiki/Links_for_UI_designs.wiki
@@ -1,16 +1,21 @@
 Update:-
+Improved Faculty Screen Draft
+
+http://cse300-group4.googlecode.com/svn/wiki/Snapshot_2012908%20(2).jpg
+------------------------------------------------------------------------------------------------------------------------------------------------
+Update:-
 
 Rough Draft of Login form:-
 
-http://cse300-group4.googlecode.com/files/08092012025.jpg -
+http://cse300-group4.googlecode.com/svn/wiki/08092012025.jpg -
 
 Rough Draft for Faculty Screen:-
 
-http://cse300-group4.googlecode.com/files/08092012024.jpg -
+http://cse300-group4.googlecode.com/svn/wiki/08092012024.jpg -
 
 
-(-Deepanker Paritosh)
---------------------------------------------------------------------------
+(Deepanker & Paritosh)
+------------------------------------------------------------------------------------------------------------------------------------------------
 Hey just saw  IBM LOTUS as suggested by Srikant Sir , can derive some ideas of designs:
 
 
