--- a/wiki/Links_for_UI_designs.wiki
+++ b/wiki/Links_for_UI_designs.wiki
@@ -1,9 +1,9 @@
-Update:-
+=Update:-=
 Improved Faculty Screen Draft
 
 http://cse300-group4.googlecode.com/svn/wiki/Snapshot_2012908%20(2).jpg
 ------------------------------------------------------------------------------------------------------------------------------------------------
-Update:-
+==Update:-==
 
 Rough Draft of Login form:-
 
