--- a/wiki/Mock_UI_Creation.wiki
+++ b/wiki/Mock_UI_Creation.wiki
@@ -33,3 +33,4 @@ http://www-01.ibm.com/software/lotus/images/Notes-iCal_723x432.jpg  -
 All the administration details like who is to be sent the notification for what process
 
 http://www-01.ibm.com/software/lotus/images/ContaactsBusinessCardView_723x524.jpg --> 
+(Abhishek Gupta)
