Edited wiki page Mock_UI_Creation through web user interface.

--- a/wiki/Mock_UI_Creation.wiki
+++ b/wiki/Mock_UI_Creation.wiki
@@ -1,4 +1,11 @@
 =Update:-=
+
+Login Home Page :
+
+http://code.google.com/p/cse300-group4/source/browse/wiki/LoginHome.JPG
+
+(Abhishek Gupta)
+
 Improved Faculty Screen Draft
 
 http://cse300-group4.googlecode.com/svn/wiki/DSC_0013.jpg
