Created a web page for the Equipment Purchase form.

--- a/wiki/Mock_UI_Creation.wiki
+++ b/wiki/Mock_UI_Creation.wiki
@@ -2,6 +2,19 @@
 
 Login Home Page :
 
+http://cse300-group4.googlecode.com/svn/wiki/EquipmentPurchase.jpg -
+
+A web page for the Equipment Purchase form.
+
+
+
+(Soumya Vardhan Singh)
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+=Update:-=
+
+Login Home Page :
+
 http://cse300-group4.googlecode.com/svn/wiki/LoginHome.JPG -
 
 
