--- a/wiki/Business_Process_Model.wiki
+++ b/wiki/Business_Process_Model.wiki
@@ -2,7 +2,7 @@
 =Update 2:-=
 Updated version of [http://cse300-group4.googlecode.com/svn/wiki/BPM%2030.PNG Equipment Purchase Form(30% complete)] (Yash Lamba)
 --------------------------------------------------------------------------
-==Update 1:-==
+=Update 1:-=
 [http://cse300-group4.googlecode.com/svn/wiki/Mock%20FlowDiagram.pdf This] is a rough State Transition diagram of the general rules followed in the Business Process Model of our project.
 
 This is does not represent the final Business Process Model and is only for testing.
