--- a/wiki/Business_Process_Model.wiki
+++ b/wiki/Business_Process_Model.wiki
@@ -1,4 +1,8 @@
 #labels Phase-Requirements
+=Update 3:-=
+Final version of Business Process Model for Equipment Purchase
+[http://code.google.com/p/cse300-group4/source/browse/wiki/Business%20Process%20Model%20for%20Equipment%20Purchase.png] (Yash Lamba)
+--------------------------------------------------------------------------
 =Update 2:-=
 Updated version of [http://cse300-group4.googlecode.com/svn/wiki/BPM%2030.PNG Equipment Purchase Form(30% complete)] (Yash Lamba)
 --------------------------------------------------------------------------
