--- a/wiki/LogoWork.wiki
+++ b/wiki/LogoWork.wiki
@@ -1,1 +1,1 @@
-The Logo had been created by Vinayak and Aishwarya and can be downloaded [http://cse300-group4.googlecode.com/svn/wiki/Sofia.png here.]
+The Logo http://cse300-group4.googlecode.com/svn/wiki/Sofia.png created by Vinayak and Aishwarya and can be downloaded [http://cse300-group4.googlecode.com/svn/wiki/Sofia.png here].
