--- a/wiki/Meetings.wiki
+++ b/wiki/Meetings.wiki
@@ -1,4 +1,4 @@
-#Summary This page is about Meetings with Staff Members(Faculty,Admin Staff)
+#summary This page is about Meetings with Staff Members(Faculty,Admin Staff)
 =Meetings=
 ==Minutes of Meeting with Dr.Debajyoti==
 Make the application as a Google App which is not only operable from the app but also through E-mail i.e. if someone replies as Approved in e-mail den it should also be reflected in the app and if there is some update to the request then it should also be conveyed through e-mail.
