Edited wiki page Business_Process_Model through web user interface.

--- a/wiki/Business_Process_Model.wiki
+++ b/wiki/Business_Process_Model.wiki
@@ -1,4 +1,5 @@
 #labels Phase-Requirements
+Creation of Business Process Model for the Project
 =Update 3:-=
 Final version of Business Process Model for Equipment Purchase
 [http://cse300-group4.googlecode.com/svn/wiki/Business%20Process%20Model%20for%20Equipment%20Purchase.png] (Yash Lamba)
