--- a/wiki/Mock_UI_Creation.wiki
+++ b/wiki/Mock_UI_Creation.wiki
@@ -10,6 +10,17 @@ http://cse300-group4.googlecode.com/svn/wiki/EquipmentPurchase.jpg -
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 =Update:-=
+[http://cse300-group4.googlecode.com/svn/wiki/SE%20project.pdf Admin Side Mock Screen]
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+=Update:-=
+Admin Screen Drafts :-
+[https://docs.google.com/drawings/d/1zoanOqEz1cRcAPsAQSExkJZTYpUXpndN4pe9uAMHctY/edit Screen 1]
+[https://docs.google.com/drawings/d/1nLQcYBTRoWr3D3-UAzZpDqOl_E1gtVlzsJ_LvN8_Edk/edit Screen 2]
+(Aishwarya, Deepanker, Paritosh, Vinayak)
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+=Update:-=
 
 Login Home Page :
 
