--- a/wiki/Business_Process_Model.wiki
+++ b/wiki/Business_Process_Model.wiki
@@ -19,3 +19,5 @@ The diagram is created by Paritosh Mittal
 For the pptx version please click [http://cse300-group4.googlecode.com/svn/wiki/Business%20Process%20Model%20for%20Expenses%20Payment.pptm here].
 
 For Business Process Model for Out Station Travel click [http://cse300-group4.googlecode.com/svn/wiki/Business%20Process%20Model%20for%20Outstation%20Travel.pptm here]
+------------------------------------------------------------------------
+Current Process Document provided by Mr.Ashwani Kansal (Registrar- IIITD) can be downloaded [http://cse300-group4.googlecode.com/svn/wiki/Process%20Document%202-01-0211.docx here].
