--- a/wiki/HorizontalPrototype.wiki
+++ b/wiki/HorizontalPrototype.wiki
@@ -7,7 +7,4 @@ http://www.youtube.com/watch?v=d9axk9cPaUk
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+The software used to make and edit the video is called Camptasia
